# chaster_multi_crm

./: .gitignore  Chaster Client Support Policy (Test.txt  PROJECT_CONTEXT.md  README.md  WIDGET_SYSTEM_GUIDE.md  instructions.md  package-lock.json  plan.md  start-chaster-dev.ps1
atomic-crm/: .env.development  (+10 more)
chaster-brain/: .env.example  .gitignore  ARCHITECTURE_MAP.md  Dockerfile  README.md  pyproject.toml  render.yaml
chaster-brain/app/: __init__.py  config.py  control_plane.py  main.py  models.py  support_suggest.py
chaster-brain/app/cache/: __init__.py  redis_client.py
chaster-brain/app/db/: client.py
chaster-brain/app/gateway/: service.py
chaster-brain/app/indexing/: __init__.py  chunking.py  pipeline.py
chaster-brain/app/mcp/: client.py
chaster-brain/app/memory/: __init__.py  manager.py
chaster-brain/app/orchestrator/: graph.py  intent_llm.py  llm.py  nodes.py  state.py
chaster-brain/app/rag/: retriever.py
chaster-brain/app/security/: hmac_validator.py  jwt_validator.py  replay_guard.py  sanitizer.py
chaster-brain/chaster_brain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chaster-brain/dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
chaster-brain/scripts/: dev_stack.py  start-dev.ps1
chaster-brain/tests/: conftest.py  test_chunking.py  test_control_api.py  test_db_client_retry.py  test_gateway_api.py  test_gateway_service.py  test_handshake_resume.py  test_intent_llm.py  test_llm_greeting.py  test_memory_manager.py  test_orchestrator.py  test_retriever_rerank.py  test_security.py
(+308 files in other folders)
